<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:padding="4dp"
            android:id="@+id/card_yagiz"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:padding="8dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="84dp"
                        android:layout_height="84dp"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_toEndOf="@id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/white"
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center"
                            android:text="@string/author"
                            android:textAllCaps="true"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/white"
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:gravity="center"
                            android:text="@string/follow"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/btn_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/black_overlay"
                    android:drawableStart="@drawable/ic_github"
                    android:padding="8dp"
                    android:text="@string/github" />

                <Button
                    android:textColor="@color/white"
                    android:text="@string/instagram"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:background="@color/instagram_purple"
                    android:drawableStart="@drawable/ic_instagram"
                    android:id="@+id/btn_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/btn_reddit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/reddit_orange"
                    android:drawableStart="@drawable/ic_reddit"
                    android:padding="8dp"
                    android:text="@string/reddit" />


                <Button
                    android:textColor="@color/white"
                    android:text="@string/telegram"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:background="@color/telegram_blue"
                    android:drawableStart="@drawable/ic_telegram"
                    android:id="@+id/btn_telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:padding="4dp"
            app:cardCornerRadius="4dp"
            android:id="@+id/card_misc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <Button
                android:drawableStart="@drawable/ic_baseline_launch_24"
                android:background="@color/colorPrimary"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Source code" />
         </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
